k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hlhomework
spec:
  selector:
    app: hlhomework
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
