k8s/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "hlhomework"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules: 
    - http: 
        paths:       
        - path: "/"
          pathType: "Prefix"
          backend: 
            service: 
              name: hlhomework
              port: 
                number: 8080
